[h1]v12.4[/h1]
-Reduced Road Network transportation output.
-Pasteurization is now Tier 3 tech (fight that pebrine, my boys!).

[h1]v12.3.1[/h1]
-Removed Sugar from basic food needs since it would be overconsumed in some cases.

[h1]v12.3[/h1]
[h1]Additions[/h1]
-Reworked [b]Glassworks[/b]:
 Added new PMG: Houseware with PMs:
    - Wooden Appliances
	- Metallic Utensils
	- Houseware Plastics (this one was moved from main PMG)
 Added new middle automation PM - [b]Glass Rollers[/b].
 Glassworks is now more profitable than before.
[h2]Tweaks/Fixes[/h2]
-Road Networks cost reduced from 600 to 400 construction.
-Food Standardization power bloc principle now has +5% food security instead of 0.5 SoL.
-Electric Streetlights PM now employs machinists instead of labourers.
-Railroads now will not auto-expand until Transportation is 25% higher than base price.
-Fixed Gas Streetlights PM for Urban Centers was more productive than it should.
-Fixed Munition Plants missing "Filler" PMG.


[h1]v12.2[/h1]
[h2]Additions/Significant Changes[/h2]
-Added new PM: Intensive Grazing Ranch for Livestock Ranches. It allows to get more fertilizer. "Fertilizer Gathering" PM was slightly nerfed in respect to vanilla.
-Added MAPI to public transport PMs in urban centers to encourage using them.
-Added MAPI to Railways and Road Networks. The better the PM, the higher the modifier. You now have to improve actual infrastructure more to get MAPI, rather than only researching society techs.
[h2]Tweaks/Fixes[/h2]
-Actualized training rate for three first training PMs (it's slightly lower now).
-probably fixed compat issues with paper mills? i need feedback about that
-Added pollution generation for High-Speed Diesel Trains.
-Removed pollution generation from High-Speed Electric Trains.
-Goods like Tea, Tobacco, Liquor and similar mass consumed goods can now provide up to 100% of the supply share.