@@ -49,6 +49,7 @@ gravel_roads = {
 	
 	modifier = {
 		state_building_road_network_max_level_add = 1
+		state_market_access_price_impact = 0.01
 	}
 	
 	unlocking_technologies = {
@@ -484,6 +485,7 @@ stone_roads = {
 	
 	modifier = {
 		state_building_road_network_max_level_add = 1
+		state_market_access_price_impact = 0.01
 	}
 	
 	unlocking_technologies = {
@@ -1685,6 +1687,7 @@ paved_roads = {
 		state_building_construction_sector_max_level_add = 5
 		market_land_trade_capacity_add = 20
 		state_infrastructure_from_automobiles_consumption_add = 0.25
+		state_market_access_price_impact = 0.01
 	}
 	
 	unlocking_technologies = {	
